--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ configure(allprojects) {
     apply plugin: "idea"
     apply plugin: "eclipse"
     apply plugin: "provided-base"
+    apply plugin: "maven"
 
     compileJava.options.encoding = 'UTF-8';
     sourceCompatibility = 1.7
