added support for scripts on the classpath

--- a/contrib-test/build.gradle
+++ b/contrib-test/build.gradle
@@ -4,3 +4,9 @@ dependencies {
     compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 }
+
+apply plugin: 'application'
+
+run {
+    mainClassName = 'de.fz.contrib.script.ScriptTest'
+}
